@@ -27,8 +27,6 @@ import io.confluent.ksql.test.util.secure.Credentials;
 import io.confluent.ksql.test.util.secure.SecureKafkaHelper;
 import io.confluent.ksql.test.util.secure.ServerKeyStore;
 import java.io.File;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.time.Duration;
 import java.util.ArrayList;
@@ -88,10 +86,9 @@ import org.slf4j.LoggerFactory;
 
 
 /**
- * Runs an in-memory, "embedded" Kafka cluster with 1 ZooKeeper instance and 1 Kafka broker.
+ * Runs an in-memory, "embedded" Kafka cluster with  1 Kafka broker.
  */
 // CHECKSTYLE_RULES.OFF: ClassDataAbstractionCoupling
-@SuppressWarnings("UnstableApiUsage")
 public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
   // CHECKSTYLE_RULES.ON: ClassDataAbstractionCoupling
 
@@ -101,12 +98,8 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
 
   public static final String JAAS_KAFKA_PROPS_NAME = "KafkaServer";
 
-  private static final String ZK_URL_PROP = "authorizer.zookeeper.url";
   private static final String LOG_CLEANER_ENABLE_PROP = "log.cleaner.enable";
 
-  private static final String ZK_CONNECT_PROP = "zookeeper.connect";
-  private static final String ZK_CONNECTION_TIMEOUT_MS_PROP = "zookeeper.connection.timeout.ms";
-  private static final String ZK_SESSION_TIMEOUT_MS_PROP = "zookeeper.session.timeout.ms";
   private static final String LOG_DIR_PROP = "log.dir";
   private static final String NUM_PARTITIONS_PROP = "num.partitions";
   private static final String OFFSETS_TOPIC_REPLICATION_FACTOR = "offsets.topic.replication.factor";
@@ -152,8 +145,6 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
   private final TemporaryFolder tmpFolder = KsqlTestFolder.temporaryFolder();
   private final List<AclBinding> addedAcls = new ArrayList<>();
   private final Map<AclKey, Set<AclOperation>> initialAcls;
-
-  private ZooKeeperEmbedded zookeeper;
   private KafkaEmbedded broker;
 
   /**
@@ -187,7 +178,7 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
     tmpFolder.create();
 
     installJaasConfig();
-    zookeeper = new ZooKeeperEmbedded();
+    //    zookeeper = new ZooKeeperEmbedded();
     broker = new KafkaEmbedded(buildBrokerConfig(tmpFolder.newFolder().getAbsolutePath()));
 
     initialAcls.forEach((key, ops) ->
@@ -210,14 +201,6 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
   public void stop() {
     if (broker != null) {
       broker.stop();
-    }
-
-    try {
-      if (zookeeper != null) {
-        zookeeper.stop();
-      }
-    } catch (final IOException e) {
-      throw new RuntimeException(e);
     }
 
     resetJaasConfig();
@@ -268,9 +251,9 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
     config.put(ConsumerConfig.GROUP_ID_CONFIG, UUID.randomUUID().toString());
     config.put(ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "earliest");
     // Try to keep consumer groups stable:
-    config.put(ConsumerConfig.HEARTBEAT_INTERVAL_MS_CONFIG, 7_000);
-    config.put(ConsumerConfig.SESSION_TIMEOUT_MS_CONFIG, 20_000);
-    config.put(ConsumerConfig.METADATA_MAX_AGE_CONFIG, 3_000);
+    config.put(ConsumerConfig.HEARTBEAT_INTERVAL_MS_CONFIG, "7000");
+    config.put(ConsumerConfig.SESSION_TIMEOUT_MS_CONFIG, "20000");
+    config.put(ConsumerConfig.METADATA_MAX_AGE_CONFIG, "3000");
     return config;
   }
 
@@ -282,19 +265,8 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
   public Map<String, Object> producerConfig() {
     final Map<String, Object> config = new HashMap<>(getClientProperties());
     config.put(ProducerConfig.ACKS_CONFIG, "all");
-    config.put(ProducerConfig.DELIVERY_TIMEOUT_MS_CONFIG, 60_000);
+    config.put(ProducerConfig.DELIVERY_TIMEOUT_MS_CONFIG, "60000");
     return config;
-  }
-
-  /**
-   * This cluster's ZK connection string aka `zookeeper.connect` in `hostnameOrIp:port` format.
-   * Example: `127.0.0.1:2181`.
-   *
-   * <p>You can use this to e.g. tell Kafka consumers how to connect to this cluster.
-   */
-  @SuppressWarnings("WeakerAccess") // Part of public API
-  public String zookeeperConnect() {
-    return zookeeper.connectString();
   }
 
   /**
@@ -602,43 +574,36 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
     final Properties config = new Properties();
     config.putAll(customBrokerConfig);
     // Only single node, so broker id always:
-    config.put(BROKER_ID_CONFIG, 0);
+    config.put(BROKER_ID_CONFIG, "0");
     // Set the log dir for the node:
     config.put(LOG_DIR_PROP, logDir);
-    // Need to know where ZK is:
-    config.put(ZK_CONNECT_PROP, zookeeper.connectString());
-    config.put(ZK_URL_PROP, zookeeper.connectString());
     // Default to small number of partitions for auto-created topics:
-    config.put(NUM_PARTITIONS_PROP, 1);
+    config.put(NUM_PARTITIONS_PROP, "1");
     // Allow tests to delete topics:
-    config.put(DELETE_TOPIC_ENABLE_CONFIG, true);
+    config.put(DELETE_TOPIC_ENABLE_CONFIG, "true");
     // Do not clean logs from under the tests or waste resources doing so:
-    config.put(LOG_CLEANER_ENABLE_PROP, false);
+    config.put(LOG_CLEANER_ENABLE_PROP, "false");
     // Only single node, so only single RF on offset topic partitions:
-    config.put(OFFSETS_TOPIC_REPLICATION_FACTOR, (short) 1);
+    config.put(OFFSETS_TOPIC_REPLICATION_FACTOR, "1");
     // Tests do not need large numbers of offset topic partitions:
     config.put(OFFSETS_TOPIC_PARTITIONS_PROP, "1");
     // Shutdown quick:
-    config.put(CONTROLLED_SHUTDOWN_ENABLE_CONFIG, false);
-    // Set ZK connect timeout high enough to give ZK time to build log file on build server:
-    config.put(ZK_CONNECTION_TIMEOUT_MS_PROP, (int) ZK_CONNECT_TIMEOUT.toMillis());
-    // Set ZK session timeout high enough that slow build servers don't hit it:
-    config.put(ZK_SESSION_TIMEOUT_MS_PROP, (int) ZK_SESSION_TIMEOUT.toMillis());
+    config.put(CONTROLLED_SHUTDOWN_ENABLE_CONFIG, "false");
     // Explicitly set to be less that the default 30 second timeout of KSQL functional tests
-    config.put(CONTROLLER_SOCKET_TIMEOUT_MS_PROP, 20_000);
+    config.put(CONTROLLER_SOCKET_TIMEOUT_MS_PROP, "20000");
     // Streams runs multiple consumers, so let's give them all a chance to join.
     // (Tests run quicker and with a more stable consumer group):
-    config.put(GROUP_INITIAL_REBALANCE_DELAY_MS_PROP, 100);
+    config.put(GROUP_INITIAL_REBALANCE_DELAY_MS_PROP, "100");
     // Stop people writing silly data in tests:
-    config.put(MESSAGE_MAX_BYTES_CONFIG, 100_000);
+    config.put(MESSAGE_MAX_BYTES_CONFIG, "100000");
     // Stop logs being deleted due to retention limits:
-    config.put(LOG_RETENTION_TIME_MILLIS_PROP, -1);
+    config.put(LOG_RETENTION_TIME_MILLIS_PROP, "-1");
     // Stop logs marked for deletion from being deleted
-    config.put(LOG_DELETE_DELAY_MS_PROP, Long.MAX_VALUE);
+    config.put(LOG_DELETE_DELAY_MS_PROP, "100000000");
     // Set to 1 because only 1 broker
-    config.put(TRANSACTIONS_TOPIC_REPLICATION_FACTOR_PROP, (short) 1);
+    config.put(TRANSACTIONS_TOPIC_REPLICATION_FACTOR_PROP, "1");
     // Set to 1 because only 1 broker
-    config.put(TRANSACTIONS_TOPIC_MIN_ISR_PROP, 1);
+    config.put(TRANSACTIONS_TOPIC_MIN_ISR_PROP, "1");
 
     return config;
   }
@@ -652,7 +617,7 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
     try {
       final String jaasConfigContent = createJaasConfigContent() + additionalJaasConfig;
       final File jaasConfig = TestUtils.tempFile();
-      Files.write(jaasConfig.toPath(), jaasConfigContent.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(jaasConfig.toPath(), jaasConfigContent);
       return jaasConfig.getAbsolutePath();
     } catch (final Exception e) {
       throw new RuntimeException(e);
@@ -723,15 +688,14 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
     Builder() {
       brokerConfig.put(AUTHORIZER_CLASS_NAME_CONFIG,
           "org.apache.kafka.metadata.authorizer.StandardAuthorizer");
-      brokerConfig.put(ALLOW_EVERYONE_IF_NO_ACL_PROP, true);
-      brokerConfig.put(LISTENERS_PROP, "PLAINTEXT://:0");
-      brokerConfig.put(AUTO_CREATE_TOPICS_ENABLE_PROP, true);
+      brokerConfig.put(ALLOW_EVERYONE_IF_NO_ACL_PROP, "true");
+      brokerConfig.put(AUTO_CREATE_TOPICS_ENABLE_PROP, "true");
     }
 
     public Builder withoutAutoCreateTopics() {
       // Create topics explicitly when needed to avoid a race which
       // automatically recreates deleted topic:
-      brokerConfig.put(AUTO_CREATE_TOPICS_ENABLE_PROP, false);
+      brokerConfig.put(AUTO_CREATE_TOPICS_ENABLE_PROP, "false");
       return this;
     }
 
@@ -798,8 +762,8 @@ public final class EmbeddedSingleNodeKafkaCluster extends ExternalResource {
     }
 
     private void addListenersProp(final String listenerType) {
-      final Object current = brokerConfig.get(LISTENERS_PROP);
-      brokerConfig.put(LISTENERS_PROP, current + "," + listenerType + "://:0");
+      brokerConfig.compute(LISTENERS_PROP,
+                (k, current) -> current + "," + listenerType + "://:0");
     }
 
     private void removeListenersProp(final String listenerType) {
